--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,2 @@
-[package]
-name = "for_ch"
-version = "0.1.0"
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[lib]
-proc-macro = true
-
-[dependencies]
-proc-macro2 = "1.0"
-quote = "1.0"
-syn = {version = "1.0", features = ["full", "parsing"] }
+[workspace]
+members = ["for_ch", "for_ch_test"]
